Adjusted bib SearchView.

--- a/Kapitel/02_App/02_ViewModel/SearchController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/SearchController/main.tex
@@ -64,3 +64,11 @@ Fordert von dem Navigationscontroller, das er die Karte mit der MapId fokussiert
 \subsection{class SearchController implements ISearchController}
 \paragraph*{Beschreibung}
 Klasse zur Suche nach Kartenobjekten und Anzeigen dieser in der Karte.
+
+
+\subsection{Bibliothek SearchView}
+\paragraph*{Beschreibung}
+Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
+Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
+und ermöglicht es dem Benutzer, einen Vorschlag oder ein Ergebnis auszuwählen.
+Diese Bibliothek kann für die Implementierung genutzt werden.
