--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/05_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/05_constructor/main.tex
@@ -3,7 +3,7 @@
 Erzeuge ein Änderungsobjekt.
 \paragraph*{Beschreibung}
 Erzeuge ein Änderungsobjekt mit einer Instanz von \verb#Change#, Metadaten und der Kategorie.
-Dabei wird der aktuelle Zeitpunkt hinterlegt
+Dabei wird der aktuelle Zeitpunkt hinterlegt.
 \paragraph*{Parameter}
 \begin{itemize}
     \item change : Change
