--- a/Kapitel/00_Backend/Repositories/main.tex
+++ b/Kapitel/00_Backend/Repositories/main.tex
@@ -1,3 +1,10 @@
 \section{Repositories}
 
 \inprelmod{Beschreibung_Repositories}
+\inprelmod{AliasRepository}
+\inprelmod{AliasSuggestionRepository}
+\inprelmod{BlacklistRepository}
+\inprelmod{DeletedAliasRepository}
+\inprelmod{MapIDRepository}
+\inprelmod{UserRepository}
+
