--- a/Kapitel/00_Backend/Resolver/MutationResolver/AliasMutation/Beschreibung_AliasMutation/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/AliasMutation/Beschreibung_AliasMutation/main.tex
@@ -7,3 +7,9 @@ Nimmt Http-Requests entgegen, welche in erster Linie Aliaseinträge manipulieren
     \item removeAlias(alias : String)
     \item removeFromBlacklist(forbiddenWord : String)
 \end{itemize}
+\paragraph*{Genutzte Klassen}
+\begin{itemize}
+    \item AliasService
+    \item DeletedAliasService
+    \item BlacklistService
+\end{itemize}
