--- a/Kapitel/00_Backend/Resolver/MutationResolver/AliasSuggestionMutation/Beschreibung_AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/AliasSuggestionMutation/Beschreibung_AliasSuggestionMutation/main.tex
@@ -7,3 +7,11 @@ Nimmt Http-Requests entgegen, welche in erster Linie Aliasvorschläge manipulier
     \item removeAlias(alias : String)
     \item removeFromBlacklist(forbiddenWord : String)
 \end{itemize}
+\paragraph*{Genutzte Klassen}
+\begin{itemize}
+    \item AliasService
+    \item UserService
+    \item AliasSuggestionService
+    \item BlacklistService
+    \item DeletedAliasService
+\end{itemize}
