--- a/Kapitel/00_Backend/Resolver/MutationResolver/Beschreibung_MutationResolver/main.tex
+++ b/Kapitel/00_Backend/Resolver/MutationResolver/Beschreibung_MutationResolver/main.tex
@@ -1,6 +1,7 @@
 \subsection{Paketbeschreibung : MutationResolver}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche die gespeicherten Daten manipulieren wollen.
+Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "GraphQLMutationResolver" erben sollten.
 \paragraph*{Enthaltene Klassen}
 \begin{itemize}
     \item AliasMutation
