--- a/Kapitel/00_Backend/Resolver/QueryResolver/AliasSuggestionQuery/Beschreibung_AliasSuggestionQuery/main.tex
+++ b/Kapitel/00_Backend/Resolver/QueryResolver/AliasSuggestionQuery/Beschreibung_AliasSuggestionQuery/main.tex
@@ -5,3 +5,7 @@ Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten AliasV
 \begin{itemize}
     \item getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<AliasSuggestion> aliasSuggestions
 \end{itemize}
+\paragraph*{Genutzte Klassen}
+\begin{itemize}
+    \item AliasSuggestionService
+\end{itemize}
