--- a/Kapitel/00_Backend/Resolver/QueryResolver/MapIDQuery/Beschreibung_MapIDQuery/main.tex
+++ b/Kapitel/00_Backend/Resolver/QueryResolver/MapIDQuery/Beschreibung_MapIDQuery/main.tex
@@ -7,3 +7,7 @@ Nimmt Http-Requests entgegen, welche Kartenobjekte bzw. MapIDs abfragen wollen.
     \item getMapID(mapObject : String) : int
     \item getAll() : List<mapID : int>
 \end{itemize}
+\paragraph*{Genutzte Klassen}
+\begin{itemize}
+    \item MapIDService
+\end{itemize}
