--- a/Kapitel/00_Backend/Services/main.tex
+++ b/Kapitel/00_Backend/Services/main.tex
@@ -5,3 +5,13 @@
 \inprelmod{AliasServiceImp}
 \inprelmod{UserService}
 \inprelmod{UserServiceImp}
+\inprelmod{AliasSuggestionService}
+\inprelmod{AliasSuggestionServiceImp}
+\inprelmod{BlacklistService}
+\inprelmod{BlacklistServiceImp}
+\inprelmod{DeletedAliasService}
+\inprelmod{DeletedAliasServiceImp}
+\inprelmod{MapIDService}
+\inprelmod{MapIDServiceImp}
+
+
