--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
@@ -13,4 +13,4 @@ Mögliche Einstellungen können dem Wiki \footnote{\href{https://github.com/Iden
             Eine Instanz mit den Einstellungen zur Verbindung mit einem OIDC-Provider.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Keinen
+void
