--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/07_getUserInfo/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/07_getUserInfo/main.tex
@@ -1,8 +1,8 @@
 \paragraph{\texttt{+getUserInfo() : JSON}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Getter für Informationen des angemeldeten Nutzers.
+Getter für die Informationen des angemeldeten Nutzers.
 \paragraph*{Beschreibung}
-Getter für Informationen des angemeldeten Nutzers.
+Getter für die Informationen des angemeldeten Nutzers.
 Ist kein ID-Token gesetzt, so wird der Nutzer aufgefordert sich zu authentifizieren, sofern der AuthManager durch \verb#AuthManager::configure# konfiguriert wurde.
 Ist der ID-Token invalide, so wird versucht diesen zu erneuern.
 Treten Fehler auf, oder wurde der AuthManager nicht authentifiziert, wird \verb#null# zurückgegeben.
