--- a/Kapitel/02_App/02_ViewModel/Karte/MapController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/MapController/main.tex
@@ -2,8 +2,8 @@
 \paragraph*{Typ}
 Implementiert MapLayerDataController.
 \paragraph*{Beschreibung}
-Diese Klasse steuert die Karte im allgemeinen. Das heißt: Diese Klasse stellt die Karte (Straßenkarte) bereit 
-und stellt die benötigten Daten zum verschieben der Karte bereit (wie Position zu der sie verschoben werden soll).\\
+Diese Klasse steuert die Karte im Allgemeinen. Das heißt: Diese Klasse stellt die Karte (Straßenkarte) bereit 
+und stellt die benötigten Daten zum Verschieben der Karte bereit (wie Position zu der sie verschoben werden soll).\\
 Diese Klasse ist insbesondere für die Verarbeitung und Steuerung des Fokus der Karte beim Betreten der 
 Kartenansicht verantwortlich (z.B. wenn ein Gebäude über die Suche gefunden wurde und angezeigt werden muss).
 Diese Information ist durch den Wechsel zwischen Ansichten durch NavHost und NavGraph verfügbar.
