--- a/Kapitel/02_App/01_View/SearchScreen/main.tex
+++ b/Kapitel/02_App/01_View/SearchScreen/main.tex
@@ -3,25 +3,15 @@
 Diese Klasse ermöglicht die Eingabe eines Suchbegriffs in ein Textfeld durch den Benutzer, 
 die Anzeige einer Liste von Suchvorschlägen und die Auswahl eines Vorschlages durch den Benutzer, 
 indem er einen Vorschlag auswählt oder die Eingabe vollständig selbst vornimmt.
-Die Klasse gehört zu View.
 
-\subsection{+ onClickSearchField}%$$$M
-\paragraph*{Kurzbeschreibung}
-Veranlasst das Anzeigen der Suchleiste mit Suchvorschlägen.
-\paragraph*{Beschreibung}
-Veranlasst das Anzeigen der Suchleiste am oberen Bildschirmrand mit der Liste an Suchvorschlägen darunter aufgelistet.
+\subsection{Beschreibung der Benutzeroberfläche}
+Die Suchleiste wird am oberen Bildschirmrand angezeigt mit der Liste an Suchvorschlägen darunter aufgelistet.
 Links neben der Suchleiste am oberen Bildschirmrand ist ein \dq Zurück-Knopf \dq{}.
-Eine Tastatur öffnet sich und ist am unteren Bilschirmrand platziert.
-\paragraph*{Parameter}
-\begin{itemize}
-    \item keine
-\end{itemize}
-\paragraph*{Rückgabewert}
-void
+Eine Tastatur ist geöffnet.
 
 \subsection{+ onClickBack}%$$$M
 \paragraph*{Beschreibung}
-Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur.
+Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur und somit die Rückkehr zur Kartenansicht.
 \paragraph*{Parameter}
 \begin{itemize}
     \item keine
@@ -31,7 +21,7 @@ void
 
 \subsection{+ onClickReturn}%$$$M
 \paragraph*{Beschreibung}
-Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur.
+Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur und somit die Rückkehr zur Kartenansicht.
 \paragraph*{Parameter}
 \begin{itemize}
     \item keine
@@ -67,7 +57,7 @@ void
 
 \subsection{+ onClickKeyboard}%$$$M
 \paragraph*{Beschreibung}
-Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der angeklickten Taste (außer Enter).
+Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der aktuell eingegebenen Zeichenkette.
 \paragraph*{Parameter}
 \begin{itemize}
     \item searchInput : String = Die Zeichenkette, die der Benutzer eingetippt hat
@@ -75,9 +65,10 @@ Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der an
 \paragraph*{Rückgabewert}
 void
 
+
 \subsection{Bibliothek SearchView}
 \paragraph*{Beschreibung}
 Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
 Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
 und ermöglicht es dem Benutzer, einen Vorschlag oder ein Ergebnis auszuwählen.
-Es ist möglich letzte Suchen prorisiert vorzuschlagen, diese Funktion wird auch verwendet.
+Diese Bibliothek kann für die Implementierung genutzt werden.
