--- a/Kapitel/02_App/02_ViewModel/SearchController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/SearchController/main.tex
@@ -1,30 +1,26 @@
 \subsection{Interface ISearchController}
 \paragraph*{Beschreibung}
 Dieses Interface ermöglicht die Suche nach Gebäuden und Räumen zu dem gegebenen String. 
-Es ermöglicht die Bestimmung der MapId zu einem ausgewählten, gültigen Suchbegriff, 
-dies kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
+Es ermöglicht die Bestimmung der MapId zu einem ausgewählten, gültigen Suchbegriff. 
+Der Suchbegriff kann eine Gebäudenummer, Gebäudenummer und Raumnummer, Gebäudenummer und Alias eines Raumes, ein Alias eines Gebäudes oder eine Person sein.
 Dies macht sie, indem sie die Daten bei SearchModel anfordert.
-Das Kartenobjekt mit der MapId wird nach abgeschlossener Suche auf der Karte mit Hilfe des Navigationskontrollers angezeigt.
+Das Kartenobjekt mit der MapId wird nach abgeschlossener Suche auf der Karte mit Hilfe des NavController angezeigt.
 
 
 \subsubsection{\texttt{+ getSuggestions() : LiveData<List<String>>}}%$$$M
 \paragraph*{Beschreibung}
-Gibt Suchvorschläge zu der in einer Variablen gespeicherten Eingabe zurück.
+Gibt Suchvorschläge zu der aktuellen Eingabe zurück.
+Wenn die Eingabe leer ist werden stattdessen die letzten Suchbegriffe angefordert und zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
 LiveData<List<String>>, Suchvorschläge zur Eingabe, die eine Klasse, die ISearchModel implementiert, zurückgegeben hat
-\paragraph*{Notizen zur Implementierung}
-Fordert Suchvorschläge zu der in einer Variablen gespeicherten Eingabe von einer Klasse, die ISearchModel implementiert, an und gibt diese zurück.
-Wenn die Eingabe leer ist werden stattdessen die letzten Suchbegriffe angefordert und zurückgegeben.
 
 \subsubsection{\texttt{+ setInput(input : String)}}%$$$M
-\paragraph*{Kurzbeschreibung}
-Speichert die gegebenen Eingabe in einer Variablen.
 \paragraph*{Beschreibung}
-Speichert die gegebenen Eingabe in einer Variablen, indem der alte Wert der Variablen überschrieben wird.
+Nimmt den aktuellen Input-String entgegen und aktualisiert damit die Suchvorschläge.
 \paragraph*{Parameter}
 \begin{itemize}
     \item input : String = Die Eingabe, den der Benutzer zur Suche eingegeben hat
@@ -34,41 +30,27 @@ void
 
 \subsubsection{\texttt{+ confirminput()}}%$$$M
 \paragraph*{Beschreibung}
-Zeigt das Kartenobjekts zu dem obersten angezeigten Suchvorschlag an.
+Zeigt das Kartenobjekts zu dem Suchvorschlag mit der höchsten Übereinstimmung an und wechselt dazu in den Kartenmodus.
+Fordert die Speicherung des Suchvorschlags von einer Klasse, die ISearchModel implementiert.
 \paragraph*{Parameter}
 \begin{itemize}
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
 void
-\paragraph*{Notizen zur Implementierung}
-Fordert die Speicherung des obersten angezeigten Suchvorschlags von einer Klasse, die ISearchModel implementiert.
-Fordert die MapId des obersten angezeigten Suchvorschlags von einer Klasse, die ISearchModel implementiert, an.
-Fordert von dem Navigationscontroller, das er die Karte mit der MapId fokussiert läd.
 
 \subsubsection{\texttt{+ selectSuggestion(suggestion : String)}}%$$$M
 \paragraph*{Beschreibung}
-Zeigt das Kartenobjekts zu dem ausgewählten Suchvorschlag an.
+Zeigt das Kartenobjekt zu dem ausgewählten Suchvorschlag an und wechselt dazu in den Kartenmodus.
+Fordert die Speicherung des ausgewählten Suchvorschlags von einer Klasse, die ISearchModel implementiert.
 \paragraph*{Parameter}
 \begin{itemize}
     \item suggestion : String = Der ausgewählte Suchvorschlag
 \end{itemize}
 \paragraph*{Rückgabewert}
 void
-\paragraph*{Notizen zur Implementierung}
-Fordert die Speicherung des ausgewählten Suchvorschlags von einer Klasse, die ISearchModel implementiert.
-Fordert die MapId des ausgewählten Suchvorschlags von einer Klasse, die ISearchModel implementiert, an.
-Fordert von dem Navigationscontroller, das er die Karte mit der MapId fokussiert läd.
 
 
 \subsection{class SearchController implements ISearchController}
 \paragraph*{Beschreibung}
 Klasse zur Suche nach Kartenobjekten und Anzeigen dieser in der Karte.
-
-
-\subsection{Bibliothek SearchView}
-\paragraph*{Beschreibung}
-Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
-Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
-und ermöglicht es dem Benutzer, einen Vorschlag oder ein Ergebnis auszuwählen.
-Diese Bibliothek kann für die Implementierung genutzt werden.
