Added DocumentScreen methodes and descriptions.

--- a/Kapitel/02_App/01_View/DocumentScreen/main.tex
+++ b/Kapitel/02_App/01_View/DocumentScreen/main.tex
@@ -2,4 +2,30 @@
 \paragraph*{Beschreibung}
 Klasse zum Anzeigen eines längeren Textes in einfachem Format, 
 dass mindestens Überschriften und Links unterstützt.
-Der Text wird in einer eigenen Ansicht angezeigt (ganzer Bildschirm).
+Es wird eine Markdown Bibliothek genutzt.
+
+\subsection{Beschreibung der Benutzeroberfläche}
+Das Dokument wird in einem eigenen Fenster im Vollbild angezeigt.
+Die Überschrift wird am oberen Bildschirmrand angezeigt.
+Links neben der Überschrift am oberen Bildschirmrand ist ein \dq Zurück-Knopf \dq{}.
+Der Text wird unter der Unterschrift und dem \dq Zurück-Knopf \dq{} angezeigt und man kann scrollen.
+
+\subsection{+ onClickBack}%$$$M
+\paragraph*{Beschreibung}
+Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen des Textanzeigefensters.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item keine
+\end{itemize}
+\paragraph*{Rückgabewert}
+void
+
+\subsection{+ onClickReturn}%$$$M
+\paragraph*{Beschreibung}
+Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließen des Textanzeigefensters.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item keine
+\end{itemize}
+\paragraph*{Rückgabewert}
+void
