--- a/Kapitel/02_App/01_View/DocumentScreen/main.tex
+++ b/Kapitel/02_App/01_View/DocumentScreen/main.tex
@@ -2,7 +2,7 @@
 \paragraph*{Beschreibung}
 Klasse zum Anzeigen eines längeren Textes in einfachem Format, 
 dass mindestens Überschriften und Links unterstützt.
-Es wird eine Markdown Bibliothek genutzt.
+Es wird eine Markdown genutzt.
 
 \subsection{Beschreibung der Benutzeroberfläche}
 Das Dokument wird in einem eigenen Fenster im Vollbild angezeigt.
