--- a/Kapitel/02_App/02_ViewModel/DocumentController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/DocumentController/main.tex
@@ -1,13 +1,13 @@
 \subsection{class DocumentController}
 \paragraph*{Beschreibung}
-Klasse zum Bekommen eines Dokumentes.
+Diese Klasse stellt der View die benötigten Dokumente bereit.
 
-\subsubsection{+ getDocument(identifier : Document) : String}%$$$M
+\subsubsection{+ getDocument(identifier : DocumentTyp) : String}%$$$M
 \paragraph*{Beschreibung}
 Die Methode gibt zu dem Bezeichner das zugehörige Dokument zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item identifier : Document = Der Bezeichner für ein Dokument
+    \item identifier : DocumentTyp = Der Bezeichner für ein Dokument
 \end{itemize}
 \paragraph*{Rückgabewert}
 String, der Text des Dokuments
