--- a/Kapitel/02_App/03_Model/DocumentModel/main.tex
+++ b/Kapitel/02_App/03_Model/DocumentModel/main.tex
@@ -16,7 +16,7 @@ String, der Text des Dokuments
 \subsubsection{enum DocumentTyp}
 \paragraph*{Elemente}
 \begin{itemize}
-    \item DATA_PROTECTION_DECLARATION
+    \item PRIVACY_POLICY
     \item IMPRESSUM
     \item HELP_PAGE
     \item LICENSES
