--- a/Kapitel/02_App/01_View/DocumentScreen/main.tex
+++ b/Kapitel/02_App/01_View/DocumentScreen/main.tex
@@ -1,7 +1,6 @@
 \subsection{DocumentScreen}
 \paragraph*{Beschreibung}
-Klasse zum Anzeigen eines längeren Textes in einfachem Format, 
-dass mindestens Überschriften und Links unterstützt.
+Klasse zum Anzeigen eines längeren Textes in einfachem Format. 
 Es wird Markdown genutzt.
 
 \subsection{Beschreibung der Benutzeroberfläche}
