--- a/Kapitel/02_App/03_Model/Daten/FileSystem/main.tex
+++ b/Kapitel/02_App/03_Model/Daten/FileSystem/main.tex
@@ -8,4 +8,11 @@ Folgende Dateien werden über das Dateisystem gespeichert.
         \item Etagenkarten: Für jede Etage in jedem Gebäude ist eine eigene Etagenkarte gespeichert. 
         Eine Etagenkarte enthält ausschließlich die Etage eines Gebäudes (Hintergrund und Wände).
     \end{itemize}
+    \item Textdokumente im Markdown-Format in allen unterstützten Sprachen:
+    \begin{itemize}
+        \item Datenschutzerklärung
+        \item Impressum
+        \item Hilfe-Seite
+        \item Lizenzen
+    \end{itemize}
 \end{itemize}
