Enhance structure of 'Resolvers', 'Services'

--- a/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Paketbeschreibung : Resolver}%$$$M
+\paragraph{Paketbeschreibung : Resolver}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beinhaltet die Schnittstellen, die von außen durch Http-Requests über die GraphQL-Schnittstelle aufgerufen werden können.
 \paragraph*{Beschreibung}
