--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : AliasMutation}%$$$M
+\paragraph{Klassenbeschreibung : AliasMutation}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche in erster Linie Aliaseinträge manipulieren wollen.
 \paragraph*{Enthaltene Methoden}
