--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/main.tex
@@ -1,4 +1,4 @@
-\subsection{AliasSuggestionMutation}
+\subsubsection{AliasSuggestionMutation}
 
 \inprelmod{Beschreibung}
 \inprelmod{approveAliasSuggestion_String_int_boolean}
