--- a/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Paketbeschreibung : QueryResolver}%$$$M
+\paragraph{Paketbeschreibung : QueryResolver}%$$$M
 \paragraph*{Kurzbeschreibung}
 Nimmt Http-Requests entgegen, welche gespeicherten Daten abfragen wollen.
 \paragraph*{Enthaltene Klassen}
