--- a/Kapitel/00_Backend/Services/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Paketbeschreibung : Service}%$$$M
+\paragraph{Paketbeschreibung : Service}%$$$M
 \paragraph*{Kurzbeschreibung}
 Schnittstellen, welche die Datenhaltung abstrahieren und Zugriff auf die zugrundeliegende Daten ermöglichen, ohne deren Struktur offenszulegen.
 Hierfür werden Interfaces genutzt, die von den Resolvern referenziert werden, ebenfalls um in den oberen Schichten möglichst 
