--- a/Kapitel/00_Backend/Services/main.tex
+++ b/Kapitel/00_Backend/Services/main.tex
@@ -1,6 +1,6 @@
 \section{Services}
 
-\inprelmod{Beschreibung_Service}
+\inprelmod{Beschreibung}
 \inprelmod{AliasService}
 \inprelmod{AliasServiceImp}
 \inprelmod{UserService}
@@ -13,5 +13,3 @@
 \inprelmod{DeletedAliasServiceImp}
 \inprelmod{MapIDService}
 \inprelmod{MapIDServiceImp}
-
-
