--- a/Kapitel/00_Backend/Services/AliasServiceImp/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : AliasServiceImp}%$$$M
+\paragraph{Klassenbeschreibung : AliasServiceImp}%$$$M
 \paragraph*{Kurzbeschreibung}
 Implementiert die Methoden von AliasService.
 \paragraph*{Benötigte Repositories}
