--- a/Kapitel/00_Backend/Services/DeletedAliasService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : DeletedAliasService}%$$$M
+\paragraph{Klassenbeschreibung : DeletedAliasService}%$$$M
 \paragraph*{Kurzbeschreibung}
 Zugriff auf die Datenhaltung über die gelöschten Aliasse. Diese wird benötigt, wenn das Frontend die getUpdates-Methode der AliasQuery-Klasse aufruft, 
 denn es muss mitgeteilt werden, welche Aliasse in der Zwischenzeit gelöscht worden sind.
